Bug 350497 - Akregator kmmsgnew and kmmsgunseen
Summary: Akregator kmmsgnew and kmmsgunseen
Status: RESOLVED FIXED
Alias: None
Product: kdepim
Classification: Applications
Component: general (other bugs)
Version First Reported In: GIT (master)
Platform: Ubuntu Linux
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2015-07-22 12:59 UTC by andreas_k
Modified: 2015-07-22 21:11 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description andreas_k 2015-07-22 12:59:28 UTC
Please use for the two icons kmmsgnew and kmmsgunseen standard icons from the theme.

kmmsgnew => mail-mark-unread-new
kmmsgunseen => mail-mark-unread

thanks

Reproducible: Always
Comment 1 Laurent Montel 2015-07-22 21:02:52 UTC
Git commit cf2fe4ecc0abd421f9c96fab747c0ef8c4a26c10 by Montel Laurent.
Committed on 22/07/2015 at 21:01.
Pushed by mlaurent into branch 'master'.

Fix Bug 350497 - Akregator kmmsgnew and kmmsgunseen

M  +0    -2    akregator/src/icons/CMakeLists.txt
D  +-    --    akregator/src/icons/kmmsgnew.png
D  +-    --    akregator/src/icons/kmmsgunseen.png
M  +2    -2    akregator/src/searchbar.cpp

http://commits.kde.org/kdepim/cf2fe4ecc0abd421f9c96fab747c0ef8c4a26c10
Comment 2 andreas 2015-07-22 21:11:02 UTC
thanks a lot.