Fix Bug 350497 - Akregator kmmsgnew and kmmsgunseen

BUG: 350497